[package]
name = "torcode"
description = "Light library to parse Bencode and Torrent format"
version = "0.1.0"
edition = "2018"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/d0rj/torcode"
keywords = ["bencode", "torrent", "parser"]

[dependencies]
nom = "7"
